Refatorar arquivo azure-pipelines.yml para adicionar variáveis de credenciais do Azure

--- a/6º Terraform - Do Básico do Avançado/pipelines/azure-pipelines.yml
+++ b/6º Terraform - Do Básico do Avançado/pipelines/azure-pipelines.yml
@@ -5,6 +5,7 @@ trigger:
 - main
 variables: 
   - group: AWS-Credentials
+  - group: Azure-Credentials
   - group: Public-Keys
 
 stages:
@@ -22,7 +23,12 @@ stages:
       env:
         AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
         AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         TF_VAR_aws_key_pub: $(TF_VAR_aws_key_pub)
+        TF_VAR_azure_key_pub: $(TF_VAR_azure_key_pub)
     - publish: $(Build.SourcesDirectory)/plan.out
       artifact: plan
       displayName: 'Publish Plan'
@@ -50,7 +56,12 @@ stages:
       env:
         AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
         AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         TF_VAR_aws_key_pub: $(TF_VAR_aws_key_pub)
+        TF_VAR_azure_key_pub: $(TF_VAR_azure_key_pub)
 
 - stage: destroy
   displayName: Destroy - Terraform
@@ -72,4 +83,9 @@ stages:
       env:
         AWS_ACCESS_KEY_ID: $(AWS_ACCESS_KEY_ID)
         AWS_SECRET_ACCESS_KEY: $(AWS_SECRET_ACCESS_KEY)
+        ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+        ARM_TENANT_ID: $(ARM_TENANT_ID)
+        ARM_SUBSCRIPTION_ID: $(ARM_SUBSCRIPTION_ID)
+        ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
         TF_VAR_aws_key_pub: $(TF_VAR_aws_key_pub)
+        TF_VAR_azure_key_pub: $(TF_VAR_azure_key_pub)
